--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,6 +3,8 @@ title: Conceptos básicos
 description: 'Conceptos básicos sobre el funcionamiento de Veri*Factu a través de KubiFACTU'
 ---
 
+import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
+
 ## Los registros de facturación
 
 Los registros de facturación son los envíos que se hacen a Veri*Factu para el **alta, subsanación y anulación de facturas**.
@@ -11,9 +13,9 @@ Los registros de facturación son los envíos que se hacen a Veri*Factu para el 
 
 El **registro de facturación** se genera en el momento en que la los datos de la factura son remitidos a nuestro sistema. Tras la generación del registro de facturación este se envía a Veri*Factu para su validación y registro.
 
-La **fecha de expedición** de la factura debe coincidir con la de generación del registro de facturación, es decir, la factura debe sernos enviada en la misma fecha en que es expedida. Además, la factura debe ser entregada al receptor (ya sea en versión impresa o digital) con un **QR de cotejo con la AEAT**. Dicho QR lo genera nuestro servicio una vez recibida y procesada la factura adecuadamente.
+La **fecha de expedición** de la factura debe coincidir con la de generación del registro de facturación, es decir, la factura debe sernos enviada en la misma fecha en que es expedida. Además, la factura debe ser entregada al receptor (ya sea en versión impresa o digital) con un **QR de cotejo** que le permita verificar que la factura ha sido correctamente remitida a la AEAT. Dicho QR lo genera nuestro servicio una vez recibida y procesada la factura adecuadamente.
 
-No obstante, se pueden dar situaciones puntuales de no coincidencia de la fecha de emisión de la factura con la del envío a nuestro sistema y subsiguiente generación del *registro de facturación*, por ejemplo, por incidencia en la remisión o causas similares.
+Se pueden dar situaciones puntuales de no coincidencia de la fecha de emisión de la factura con la del envío a nuestro sistema y subsiguiente generación del *registro de facturación*, por ejemplo, por incidencia en la remisión o causas similares.
 
 ## Encadenamiento (trazabilidad)
 
@@ -24,3 +26,5 @@ Los registros de facturación encadenan de forma independiente dentro de cada SI
 <Note>Un SIF puede procesar registros de facturación de diferentes empresas.</Note>
 
 <Info>Nuestro sistema se encarga de generar los datos de encadenamiento de forma automática en base a las facturas previamente procesadas para los correspondientes SIFs y empresas.</Info>
+
+<ClientDefaultHeaders />
