--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,86 +1,88 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Inicio rápido'
+description: 'Ejemplo de envío de una factura ordinaria básica'
 ---
 
-## Setup your development
+import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
 
-Learn how to update your docs locally and deploy them to the public.
+## Encabezados HTTP
 
-### Edit and preview
+<ClientDefaultHeaders />
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
+## Cuerpo JSON de la petición
 
-### Deploy your changes
+Se trata de la remisión de un registro de facturación de alta de factura ordinaria por un total de `121.00€`, con un concepto por valor de `100.00€` + IVA del `21.00%`.
 
-<AccordionGroup>
+<CodeGroup>
+```json Body
+{
+  "sif_id": "9db0bca1-187e-4cf4-b87c-96f2044008d7",
+  "certificate_password": "xxxxxxx",
+  "invoice_type_key": "F1", // Factura (art. 6, 7.2 y 7.3 del RD 1619/2012)
+  "sender_data": {
+    "company_name": "Empresa emisora de ejemplo",
+    "tax_id_number": "J27290840"
+  },
+  "recipients": [
+    {
+      "company_name": "Empresa receptora de ejemplo",
+      "tax_id_number": "B99014037"
+    }
+  ],
+  "full_invoice_number": "2025-000001",
+  "fiscal_year": "2025",
+  "issue_date": "2025-01-01",
+  "operation_description": "Factura ordinaria por entrega de mercancías.",
+  "total_quota": 21.00,
+  "total_amount": 121.00,
+  "lines": [
+    {
+      "tax_type_key": "01", // Impuesto sobre el Valor Añadido (IVA)
+      "vat_tax_regime_key": "01", // Operación de régimen general
+      "operation_type_key": "S1", // Operación Sujeta y No exenta - Sin inversión del sujeto pasivo
+      "tax_base": "100.00",
+      "tax_rate": "21.00",
+      "tax_quota": "21.00"
+    }
+  ]
+}
+```
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
-</AccordionGroup>
-
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
-
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
-
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
-
-</CardGroup>
+```bash cURL
+curl -X "POST" "https://kubifactu.kubicode.test/api/invoices" \
+     -H 'Accept: application/json' \
+     -H 'Content-Type: text/plain; charset=utf-8' \
+     -H 'X-Qbikode-ClientApiKey: API-KEY de la empresa' \
+     -d $'{
+  "sif_id": "9db0bca1-187e-4cf4-b87c-96f2044008d7",
+  "certificate_password": "xxxxxx",
+  "invoice_type_key": "F1",
+  "sender_data": {
+    "company_name": "Empresa emisora de ejemplo",
+    "tax_id_number": "J27290840"
+  },
+  "recipients": [
+    {
+      "company_name": "Empresa receptora de ejemplo",
+      "tax_id_number": "B99014037"
+    }
+  ],
+  "full_invoice_number": "2025-000001",
+  "fiscal_year": "2025",
+  "issue_date": "2025-01-01",
+  "operation_description": "Factura ordinaria por entrega de mercancías.",
+  "total_quota": 21.00,
+  "total_amount": 121.00,
+  "lines": [
+    {
+      "tax_type_key": "01",
+      "vat_tax_regime_key": "01",
+      "operation_type_key": "S1",
+      "tax_base": "100.00",
+      "tax_rate": "21.00",
+      "tax_quota": "21.00"
+    }
+  ]
+}'
+```
+</CodeGroup>
