--- a/api-reference/facturas/create.mdx
+++ b/api-reference/facturas/create.mdx
@@ -1,33 +1,316 @@
 ---
 title: 'Enviar factura'
-api: 'POST /user'
-description: 'Welcome to the home of your new documentation'
+api: 'POST /api/invoices'
+description: 'Generación de un nuevo registro de facturación'
 ---
 
-| Property | Description                           |
-|----------|---------------------------------------|
-| Name     | Full **name** of user                 |
-| Age      | Reported age                          |
-| Joined   | Whether the user joined the community |
+## Encabezados HTTP
 
-<ParamField body="user_age" type="integer" default="0" required>
-  The age of the user. Cannot be less than 0
+<ParamField header="Content-Type" type="string" required>
+  Debe ser `application/json`.
 </ParamField>
 
-<ParamField body="user_age" type="integer" default="0" required>
-  The age of the user. Cannot be less than 0
+<ParamField header="X-Qbikode-ClientApiKey" type="string" required>
+  Api-KEY de la empresa que emite la factura.
 </ParamField>
 
-<RequestExample>
-```bash Request
-  curl --request POST \
-    --url https://dog-api.kinduff.com/api/facts
-```
-</RequestExample>
+## Cuerpo JSON
 
-<ResponseExample>
-```json Response
-{ "status": "success" }
-```
-</ResponseExample>
+<ParamField body="sif_id" type="string" required>
+  ID del SIF que se quiere utilizar para el envío de la factura. Los SIFs se pueden registrar en el panel web de KubiFACTU.
+</ParamField>
 
+<ParamField body="certificate_password" type="string" required>
+  Contraseña del certificado de la empresa emisora de la factura.
+</ParamField>
+
+<ParamField body="invoice_type_key" type="string" required>
+  Especificación del tipo de factura: factura completa, factura simplificada, factura emitida en sustitución de facturas simplificadas o factura rectificativa.
+  
+  [Valores disponibles](/api-reference/valores/invoice-type-key).
+</ParamField>
+
+<ParamField body="sender_data" type="object" required>
+  Información referente al emisor de la factura.
+
+  <Expandable title="properties">
+    <ParamField body="company_name" type="string" required>
+      Nombre de la empresa emisora.
+    </ParamField>
+
+    <ParamField body="tax_id_number" type="string" required>
+      NIF/CIF de la empresa emisora.
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField body="recipients" type="object[]">
+  Información de los receptores de la factura. Obligatorio para facturas ordinarias
+
+  <Expandable title="properties">
+    <ParamField body="company_name" type="string" required>
+      Nombre de la empresa receptora.
+    </ParamField>
+
+    <ParamField body="tax_id_number" type="string">
+      NIF/CIF de la empresa receptora. Este campo es obligatorio si el receptor es nacional y se identifica mediante CIF/NIF.
+    </ParamField>
+
+    <ParamField body="other_country_code" type="string">
+      Sólo es necesario rellenarlo si el destinatario de la factura no es nacional o, siendo nacional, utiliza pasaporte como identificación. Código del país del destinatario de la operación de la factura expedida en formato [ISO 3166-1 alpha-2](https://en.wikipedia.org/wiki/ISO_3166-2).
+    </ParamField>
+
+    <ParamField body="other_tax_id_type_key" type="string">
+      Clave para establecer el tipo de identificación en el país de residencia, del destinatario de la operación de la factura expedida.
+      
+      [Valores disponibles](/api-reference/valores/other-tax-id-type-key).
+    </ParamField>
+
+    <ParamField body="other_tax_id_number" type="string">
+      Número de identificación en el país de residencia del destinatario de la operación de la factura expedida.
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField body="representative_company_name" type="string">
+  Nombre/razón social del representante del obligado tributario. A rellenar solo en caso de que los registros de facturación remitidos hayan sido generados por un representante/asesor del obligado tributario.
+</ParamField>
+
+<ParamField body="representative_tax_id_number" type="string">
+  NIF del representante del obligado tributario. A rellenar solo en caso de que los registros de facturación remitidos hayan sido generados por un representante/asesor del obligado tributario.
+</ParamField>
+
+<ParamField body="correction_key" type="string">
+  Indicador que especifica que se trata de una subsanación de un registro de facturación de alta previamente generado, por lo que el contenido de este nuevo registro de facturación es el correcto y el que deberá tenerse en cuenta. Si no se informa este campo se entenderá que tiene valor "N" (alta normal/inicial).
+  
+  [Valores disponibles](/api-reference/valores/correction-key).
+</ParamField>
+
+<ParamField body="full_invoice_number" type="string" required>
+  Serie+Nº Factura que identifica a la factura emitida. Ejemplo: `2025-00001`.
+</ParamField>
+
+<ParamField body="fiscal_year" type="integer" example="122" required>
+  Ejercicio fiscal en el que se emite la factura.
+</ParamField>
+
+<ParamField body="issue_date" type="string" required>
+  Fecha de expedición de la factura en formato `yyyy-mm-dd`. Ejemplo: `2025-02-26`.
+</ParamField>
+
+<ParamField body="operation_date" type="string">
+  Fecha en la que se ha realizado la operación, siempre que sea diferente a la fecha de expedición. Formato `yyyy-mm-dd`. Ejemplo: `2025-02-26`.
+</ParamField>
+
+<ParamField body="operation_description" type="string" required>
+  Descripción del objeto de la factura.
+</ParamField>
+
+<ParamField body="lines" type="object[]">
+  Desglose de la factura con la lista de los conceptos facturados.
+
+  <Expandable title="properties">
+    <ParamField body="tax_type_key" type="string" required>
+      Impuesto de aplicación.
+
+      [Valores disponibles](/api-reference/valores/tax-type-key).
+    </ParamField>
+
+    <ParamField body="vat_tax_regime_key" type="string" required>
+      Clave que identificará el tipo de régimen del impuesto o una operación con trascendencia tributaria.
+
+      Obligatorio si no se indica el campo `igic_tax_regime_key`.
+
+      [Valores disponibles](/api-reference/valores/vat-tax-regime-key).
+    </ParamField>
+
+    <ParamField body="igic_tax_regime_key" type="string" required>
+      Clave que identificará el tipo de régimen del impuesto o una operación con trascendencia tributaria.
+
+      Obligatorio si no se indica el campo `vat_tax_regime_key`.
+
+      [Valores disponibles](/api-reference/valores/igic-tax-regime-key).
+    </ParamField>
+
+    <ParamField body="operation_type_key" type="string" required>
+      Clave de la operación **sujeta y no exenta** o de la operación **no sujeta**.
+
+      [Valores disponibles](/api-reference/valores/operation-type-key).
+    </ParamField>
+
+    <ParamField body="exemption_cause_key" type="string">
+      Campo que especifica la causa de la exención.
+
+      [Valores disponibles](/api-reference/valores/exemption-cause-key).
+    </ParamField>
+
+    <ParamField body="tax_base" type="decimal" required>
+      Magnitud dineraria sobre la que se aplica el tipo impositivo/importe no sujeto. Valor con dos decimales. Ejemplo: `200.00`.
+    </ParamField>
+
+    <ParamField body="tax_base_at_cost" type="decimal">
+      Magnitud dineraria sobre la que se aplica el tipo impositivo en **régimen especial de grupos nivel avanzado**. Valor con dos decimales. Ejemplo: `100.00`.
+    </ParamField>
+
+    <ParamField body="tax_rate" type="decimal">
+      Porcentaje aplicado sobre la base imponible para calcular la cuota. Valor con dos decimales. Ejemplo: `21.00`.
+    </ParamField>
+
+    <ParamField body="tax_quota" type="decimal">
+      Cuota resultante de aplicar a la base imponible el tipo impositivo. Valor con dos decimales. Ejemplo: `42.00`.
+    </ParamField>
+
+    <ParamField body="equalization_tax_rate" type="decimal">
+      Porcentaje asociado en función del impuesto y tipo impositivo. Valor con dos decimales. Ejemplo: `5.20`.
+    </ParamField>
+
+    <ParamField body="equalization_tax_quota" type="decimal">
+      Cuota resultante de aplicar a la base imponible el tipo de recargo de equivalencia.. Valor con dos decimales. Ejemplo: `10.40`.
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField body="total_quota" type="decimal">
+  Importe total de la cuota (sumatorio de la cuota repercutida y cuota de recargo de equivalencia)  de la factura. Valor con dos decimales. Ejemplo: `33.57`.
+</ParamField>
+
+<ParamField body="total_amount" type="decimal">
+  Importe total de la factura. Ʃ(`tax_base` + `tax_quota` +
+`equalization_tax_quota`) de todas las líneas de detalle de desglose (agrupación `lines`). Valor con dos decimales. Ejemplo: `2450.75`.
+</ParamField>
+
+<ParamField body="simplified_invoice_key" type="string">
+  Factura simplificada Articulo 7.2 Y 7.3 RD 1619/2012. Si no se informa este campo se entenderá que tiene valor `N`.
+  
+  Sólo se podrá rellenar con `S` si `invoice_type_key` es `F1`, `F3`, `R1`, `R2`, `R3` o `R4`.
+  
+  [Valores disponibles](/api-reference/valores/simplified-invoice-key).
+</ParamField>
+
+<ParamField body="without_recipient_identification_key" type="string">
+  Factura sin identificación destinatario artículo 6.1.d, RD 1619/2012. Si no se informa este campo se entenderá que tiene valor "N".
+  
+  Sólo se podrá rellenar con `S` si `invoice_type_key` es `F2` o `R5`.
+
+  [Valores disponibles](/api-reference/valores/without-recipient-identification-key).
+</ParamField>
+
+<ParamField body="macrodata_key" type="string">
+  Identificador que especifica aquellas facturas con base o importe >= |100.000.000,00| (valor absoluto). Si no se informa este campo se entenderá que tiene valor `N`.
+  
+  Sólo se podrá rellenar con `S` si `invoice_type_key` es `F2` o `R5`.
+
+  [Valores disponibles](/api-reference/valores/macrodata-key).
+</ParamField>
+
+<ParamField body="issued_by_third_party_or_recipient_key" type="string">
+  Identificador que especifica si la factura ha sido expedida materialmente por un tercero o por el destinatario (contraparte).
+  
+  * Si es igual a `T`, el bloque `third_party_data` será de cumplimentación obligatoria.
+  * Si es igual a `D`, el bloque `recipients` será de cumplimentación obligatoria.
+
+  [Valores disponibles](/api-reference/valores/issued-by-third-party-or-recipient-key).
+</ParamField>
+
+<ParamField body="third_party_data" type="object">
+  Información del tercero que expide la factura.
+
+  <Expandable title="properties">
+    <ParamField body="company_name" type="string" required>
+      Nombre de la empresa.
+    </ParamField>
+
+    <ParamField body="tax_id_number" type="string">
+      NIF/CIF de la empresa. Este campo es obligatorio si el tercero que expide la factura es nacional y se identifica mediante CIF/NIF.
+    </ParamField>
+
+    <ParamField body="other_country_code" type="string">
+      Sólo es necesario rellenarlo si el tercero que expide la factura no es nacional o, siendo nacional, utiliza pasaporte como identificación. Código del país del destinatario de la operación de la factura expedida en formato [ISO 3166-1 alpha-2](https://en.wikipedia.org/wiki/ISO_3166-2).
+    </ParamField>
+
+    <ParamField body="other_tax_id_type_key" type="string">
+      Clave para establecer el tipo de identificación en el país de residencia del tercero que expide la factura.
+      
+      [Valores disponibles](/api-reference/valores/other-tax-id-type-key).
+    </ParamField>
+
+    <ParamField body="other_tax_id_number" type="string">
+      Número de identificación, en el país de residencia del tercero que expide la factura.
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField body="rectificative_type_key" type="string">
+  Campo que identifica si el tipo de factura rectificativa es por **sustitución** o por **diferencia**.
+
+  * Solo podrá incluirse este campo si el valor del campo `invoice_type_key` es `R1`, `R4` o `R5`.
+  * Campo obligatorio si `invoice_type_key` es `R1`, `R2`, `R3`, `R4` o `R5`.
+
+  [Valores disponibles](/api-reference/valores/rectificative-type-key).
+</ParamField>
+
+<ParamField body="rectified_tax_base" type="decimal">
+  Base imponible rectificada. Valor con dos decimales. Ejemplo: `2500.55`.
+</ParamField>
+
+<ParamField body="rectified_tax_quota" type="decimal">
+  Cuota de impuesto rectificada. Valor con dos decimales. Ejemplo: `21.00`.
+</ParamField>
+
+<ParamField body="rectified_equalization_tax_quota" type="decimal">
+  Cuota de recargo de equivalencia rectificada. Valor con dos decimales. Ejemplo: `5.20`.
+</ParamField>
+
+<ParamField body="rectified_invoices" type="object[]">
+  Lista de facturas que se están rectificando.
+
+  <Expandable title="properties">
+    <ParamField body="tax_id_number" type="string" required>
+      NIF/CIF de la empresa emisora de la factura que quiere rectificar.
+    </ParamField>
+
+    <ParamField body="full_invoice_number" type="string">
+      Serie+Nº Factura que identifica a la factura que se quiere rectificar. Ejemplo: `2025-00001`.
+    </ParamField>
+
+    <ParamField body="issue_date" type="string" required>
+      Fecha de expedición de la factura que se quiere rectificar en formato `yyyy-mm-dd`. Ejemplo: `2025-02-26`.
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField body="substituted_invoices" type="object[]">
+  Lista de facturas que se quieren sustituir.
+
+  Sólo podrá incluirse esta agrupación cuando el campo `invoice_type_key` sea `F3`.
+
+  <Expandable title="properties">
+    <ParamField body="tax_id_number" type="string" required>
+      NIF/CIF de la empresa emisora de la factura que quiere sustituir.
+    </ParamField>
+
+    <ParamField body="full_invoice_number" type="string">
+      Serie+Nº Factura que identifica a la factura que se quiere sustituir. Ejemplo: `2025-00001`.
+    </ParamField>
+
+    <ParamField body="issue_date" type="string" required>
+      Fecha de expedición de la factura que se quiere sustituir en formato `yyyy-mm-dd`. Ejemplo: `2025-02-26`.
+    </ParamField>
+  </Expandable>
+</ParamField>
+
+<ParamField body="coupon_key" type="string">
+  Identificador que especifica si tiene minoración de la base imponible por la concesión de cupones, bonificaciones o descuentos cuando solo se expide el original de la factura. Si no se informa este campo se entenderá que tiene valor `N`.
+
+  Sólo se podrá rellenar con `S` si `invoice_type_key` es `R5` o `R1`.
+
+  [Valores disponibles](/api-reference/valores/coupon-key).
+</ParamField>
+
+<ParamField body="invoicing_agreement_registration_number" type="string">
+  Número de registro obtenido al enviar la autorización en materia de facturación o de libros registro a que se refiere la disposición adicional primera del Real Decreto que aprueba el Reglamento.
+</ParamField>
+
+<ParamField body="sif_agreement_id" type="string">
+  Identificación del acuerdo (resolución) a que se refiere el artículo 5 del Reglamento.
+</ParamField>
