Listas de valores.

--- a/api-reference/valores/exemption-cause-key.mdx
+++ b/api-reference/valores/exemption-cause-key.mdx
@@ -3,7 +3,11 @@ title: 'exemption_cause_key'
 description: 'Valores posibles para el campo exemption_cause_key'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| S     |             |
-| N     |             |
+| Valor | Descripción                      |
+|-------|----------------------------------|
+| `E1`  | Exenta por el artículo 20        |
+| `E2`  | Exenta por el artículo 21        |
+| `E3`  | Exenta por el artículo 22        |
+| `E4`  | Exenta por los artículos 23 y 24 |
+| `E5`  | Exenta por el artículo 25        |
+| `E6`  | Exenta por otros                 |
