--- a/api-reference/valores/invoice-type-key.mdx
+++ b/api-reference/valores/invoice-type-key.mdx
@@ -3,12 +3,15 @@ title: 'invoice_type_key'
 description: 'Valores posibles para el campo invoice_type_key'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| F1    |             |
-| F2    |             |
-| F3    |             |
-|       |             |
-|       |             |
-|       |             |
-|       |             |
+| Valor | Descripción                                                                                  |
+|-------|----------------------------------------------------------------------------------------------|
+| `F1`  | Factura (art. 6, 7.2 y 7.3 del RD 1619/2012)                                                 |
+| `F2`  | Factura Simplificada y Facturas sin identificación del destinatario art. 6.1.d) RD 1619/2012 |
+| `F3`  | Factura emitida en sustitución de facturas simplificadas facturadas y declaradas             |
+| `R1`  | Factura Rectificativa (Error fundado en derecho y Art. 80 Uno Dos y Seis LIVA)               |
+| `R2`  | Factura Rectificativa (Art. 80.3)                                                            |
+| `R3`  | Factura Rectificativa (Art. 80.4)                                                            |
+| `R4`  | Factura Rectificativa (Resto)                                                                |
+| `R5`  | Factura Rectificativa en facturas simplificadas                                              |
+
+<Note>Las menciones a la LIVA (Ley 37/1992, de 28 de diciembre, del Impuesto sobre el Valor Añadido) en esta lista deben entenderse realizadas, en su caso, a la normativa equivalente de Canarias, Ceuta y Melilla.</Note>
