--- a/api-reference/valores/other-tax-id-type-key.mdx
+++ b/api-reference/valores/other-tax-id-type-key.mdx
@@ -3,12 +3,11 @@ title: 'other_tax_id_type_key'
 description: 'Valores posibles para el campo other_tax_id_type_key'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| F1    |             |
-| F2    |             |
-| F3    |             |
-|       |             |
-|       |             |
-|       |             |
-|       |             |
+| Valor | Descripción                                                                         |
+|-------|-------------------------------------------------------------------------------------|
+| `02`  | NIF-IVA                                                                             |
+| `03`  | Pasaporte                                                                           |
+| `04`  | Documento oficial de identificación expedido por el país o territorio de residencia |
+| `05`  | Certificado de residencia                                                           |
+| `06`  | Otro documento probatorio                                                           |
+| `07`  | No censado                                                                          |
