--- a/api-reference/valores/rectificative-type-key.mdx
+++ b/api-reference/valores/rectificative-type-key.mdx
@@ -3,7 +3,7 @@ title: 'rectificative_type_key'
 description: 'Valores posibles para el campo rectificative_type_key'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| S     |             |
-| N     |             |
+| Valor | Descripción     |
+|-------|-----------------|
+| `S`   | Por sustitución |
+| `I`   | Por diferencias |
