--- a/api-reference/valores/tax-type-key.mdx
+++ b/api-reference/valores/tax-type-key.mdx
@@ -3,7 +3,10 @@ title: 'tax_type_key'
 description: 'Valores posibles para el campo tax_type_key'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| S     |             |
-| N     |             |
+| Código | Descripción                                                                             |
+|--------|-----------------------------------------------------------------------------------------|
+| `01`   | Impuesto sobre el Valor Añadido (IVA).                                                  |
+| `02`   | Impuesto sobre la Producción, los Servicios y la Importación (IPSI) de Ceuta y Melilla. |
+| `03`   | Impuesto General Indirecto Canario (IGIC).                                              |
+| `05`   | Otros.                                                                                  |
+
