--- a/api-reference/valores/without-recipient-identification-key.mdx
+++ b/api-reference/valores/without-recipient-identification-key.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'simplified_invoice_key'
-description: 'Valores posibles para el campo simplified_invoice_key'
+title: 'without_recipient_identification_key'
+description: 'Valores posibles para el campo without_recipient_identification_key'
 ---
 
 | Valor | Descripción |
 |-------|-------------|
-| S     |             |
-| N     |             |
+| `S`   | Sí          |
+| `N`   | No          |
