--- a/api-reference/valores/issued-by-third-party-or-recipient-key.mdx
+++ b/api-reference/valores/issued-by-third-party-or-recipient-key.mdx
@@ -3,7 +3,7 @@ title: 'issued_by_third_party_or_recipient_key'
 description: 'Valores posibles para el campo issued_by_third_party_or_recipient_key'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| S     |             |
-| N     |             |
+| Valor | Descripción  |
+|-------|--------------|
+| `D`   | Destinatario |
+| `T`   | Tercero      |
