--- a/api-reference/valores/vat-tax-regime-key.mdx
+++ b/api-reference/valores/vat-tax-regime-key.mdx
@@ -1,9 +1,26 @@
 ---
 title: 'vat_tax_regime_key'
 description: 'Valores posibles para el campo vat_tax_regime_key'
+mode: 'wide'
 ---
 
-| Valor | Descripción |
-|-------|-------------|
-| S     |             |
-| N     |             |
+| Código | Descripción                                                                                                                                                                                                                                                                                              |
+|--------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `01`   | Operación de régimen general.                                                                                                                                                                                                                                                                            |
+| `02`   | Exportación.                                                                                                                                                                                                                                                                                             |
+| `03`   | Operaciones a las que se aplique el régimen especial de bienes usados, objetos de arte, antigüedades y objetos de colección.                                                                                                                                                                             |
+| `04`   | Régimen especial del oro de inversión.                                                                                                                                                                                                                                                                   |
+| `05`   | Régimen especial de las agencias de viajes.                                                                                                                                                                                                                                                              |
+| `06`   | Régimen especial grupo de entidades en IVA (Nivel Avanzado).                                                                                                                                                                                                                                             |
+| `07`   | Régimen especial del criterio de caja.                                                                                                                                                                                                                                                                   |
+| `08`   | Operaciones sujetas al IPSI / IGIC (Impuesto sobre la Producción, los Servicios y la Importación / Impuesto General Indirecto Canario).                                                                                                                                                                  |
+| `09`   | Facturación de las prestaciones de servicios de agencias de viaje que actúan como mediadoras en nombre y por cuenta ajena (D.A.4ª RD1619/2012).                                                                                                                                                          |
+| `10`   | Cobros por cuenta de terceros de honorarios profesionales o de derechos derivados de la propiedad industrial, de autor u otros por cuenta de sus socios, asociados o colegiados efectuados por sociedades, asociaciones, colegios profesionales u otras entidades que realicen estas funciones de cobro. |
+| `11`   | Operaciones de arrendamiento de local de negocio.                                                                                                                                                                                                                                                        |
+| `14`   | Factura con IVA pendiente de devengo en certificaciones de obra cuyo destinatario sea una Administración Pública.                                                                                                                                                                                        |
+| `15`   | Factura con IVA pendiente de devengo en operaciones de tracto sucesivo.                                                                                                                                                                                                                                  |
+| `17`   | Operación acogida a alguno de los regímenes previstos en el Capítulo XI del Título IX (OSS e IOSS).                                                                                                                                                                                                      |
+| `18`   | Recargo de equivalencia.                                                                                                                                                                                                                                                                                 |
+| `19`   | Operaciones de actividades incluidas en el Régimen Especial de Agricultura, Ganadería y Pesca (REAGYP).                                                                                                                                                                                                  |
+| `20`   | Régimen simplificado.                                                                                                                                                                                                                                                                                    |
+
