--- a/api-reference/facturas/create.mdx
+++ b/api-reference/facturas/create.mdx
@@ -314,3 +314,57 @@ description: 'Generación de un nuevo registro de facturación'
 <ParamField body="sif_agreement_id" type="string">
   Identificación del acuerdo (resolución) a que se refiere el artículo 5 del Reglamento.
 </ParamField>
+
+## Respuesta
+
+<ResponseField name="data" type="object">
+
+  Datos del registro de facturación.
+
+  <Expandable title="properties" defaultOpen>
+    <ResponseField name="id" type="string">
+      Identificador (ID) de la factura en el sistema de **KubiFACTU**. Se utiliza para hacer referencia al registro de facturación desde otros endpoints como, por ejemplo, el de [anulación de facturas](/api-reference/facturas/cancel).
+    </ResponseField>
+
+    <ResponseField name="request_id" type="string">
+      Identificador de la petición como referencia para el soporte técnico.
+    </ResponseField>
+
+    <ResponseField name="full_invoice_number" type="string">
+      Número de la factura registrada.
+    </ResponseField>
+
+    <ResponseField name="fingerprint" type="string">
+      Huella de la factura registrada.
+    </ResponseField>
+
+    <ResponseField name="vf_post_status" type="string">
+      Estado del envío a Veri*Factu. Este campo indica si la factura ha sido enviada a Veri*Factu, pero no indica si el registro ha sido aceptado.
+
+      [Valores disponibles](/api-reference/valores/vf-post-status).
+    </ResponseField>
+
+    <ResponseField name="vf_record_registration_status" type="string">
+      Estado del envío a Veri*Factu. Este campo indica si la factura ha sido enviada a Veri*Factu, pero no indica si el registro ha sido aceptado.
+
+      [Valores disponibles](/api-reference/valores/vf-record-registration-status).
+    </ResponseField>
+
+    <ResponseField name="has_warnings" type="boolean">
+      Indica si el registro contiene errores que deban ser subsanados.
+    </ResponseField>
+
+    <ResponseField name="vf_error_descriptions" type="string">
+      Cadena con la descripción de los errores devueltos por Veri*Factu.
+    </ResponseField>
+
+    <ResponseField name="qr_value" type="string">
+      URL que debe mostrarse en el QR de las facturas procesadas con Veri*Factu. Esta URL sirve para que el receptor de la factura pueda validar que esta ha sido correctamente enviada a Veri*Factu.
+    </ResponseField>
+
+    <ResponseField name="qr_image" type="string">
+      Imagen del QR (PNG) en formato Base64.
+    </ResponseField>
+  </Expandable>
+</ResponseField>
+
