--- a/introduction.mdx
+++ b/introduction.mdx
@@ -21,7 +21,7 @@ Se pueden dar situaciones puntuales de no coincidencia de la fecha de emisión d
 
 La trazabilidad se refiere a que se pueda garantizar que no hay "huecos" o "saltos" en la secuencia de generación de los registros de facturación correspondientes a las facturas expedidas utilizando un determinado **Sistema Informático de Facturación (SIF)**, así como que dicha secuencia se corresponde con la de la fecha y hora de generación empleadas.
 
-Los registros de facturación encadenan de forma independiente dentro de cada SIF y para cada empresa que emita facturas. Es decir, **existe una única cadena de registros de facturación por cada par de valores distintos de SIF y empresa emisora de facturas**.
+Los registros de facturación se encadenan de forma independiente dentro de cada SIF y para cada empresa que emita facturas. Es decir, **existe una única cadena de registros de facturación por cada par de valores distintos de SIF y empresa emisora de facturas**.
 
 <Note>Un SIF puede procesar registros de facturación de diferentes empresas.</Note>
 
