--- a/api-reference/facturas/examples/simplified-substitution.mdx
+++ b/api-reference/facturas/examples/simplified-substitution.mdx
@@ -11,7 +11,7 @@ import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
 
 ## Cuerpo JSON de la petición
 
-* El campo `invoice_type_key` utiliza el valor `F3`.
+* El campo `invoice_type_key` utiliza el valor `F3` (Factura emitida en sustitución de facturas simplificadas facturadas y declaradas).
 * Se incluyen los destinatarios (`recipients`) de la factura.
 * Se incluye la agrupación `substituted_invoices`.
 
