--- a/api-reference/facturas/examples/simplified.mdx
+++ b/api-reference/facturas/examples/simplified.mdx
@@ -11,7 +11,7 @@ import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
 
 ## Cuerpo JSON de la petición
 
-El campo `invoice_type_key` utiliza el valor `F2` y no se incluyen destinatarios (`recipients`) de la factura.
+El campo `invoice_type_key` utiliza el valor `F2` (Factura Simplificada y Facturas sin identificación del destinatario art. 6.1.d RD 1619/2012) y no se incluyen destinatarios (`recipients`) de la factura.
 
 <CodeGroup>
 ```json JSON
