--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -11,7 +11,7 @@ import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
 
 ## Cuerpo JSON de la petición
 
-Se trata de la remisión de un registro de facturación de alta de factura ordinaria por un total de `121.00€`, con un concepto por valor de `100.00€` + IVA del `21.00%`.
+Este ejemplo muestra de la remisión de una factura ordinaria por un total de `121.00€`, con un concepto por valor de `100.00€` + IVA del `21.00%`.
 
 <CodeGroup>
 ```json Body
