Los campos de QR pueden ser null.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-03-25" description="v1.0.1beta">
+  En la respuesta del endpoint _**Enviar registro de facturación**_ los campos `qr_value` y `qr_image` pueden ser `null`.
+</Update>
+
 <Update label="2025-01-08" description="v1.0.0beta">
   Versión inicial de la documentación en fase Beta.
 </Update>
