--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,7 +4,7 @@ description: 'Registro de actualizaciones de la documentación'
 ---
 
 <Update label="2025-03-25" description="v1.0.1beta">
-  En la respuesta del endpoint _**Enviar registro de facturación**_ los campos `qr_value` y `qr_image` pueden ser `null`.
+  En la respuesta del endpoint _**Enviar registro de facturación**_ los campos `qr_value` y `qr_image` pueden ser `null`. Esto ocurre cuando la factura ha sido rechazada por Verifactu.
 </Update>
 
 <Update label="2025-01-08" description="v1.0.0beta">
