--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-04-08" description="v0.2.0beta">
+  - Información referente a los [registros de facturación en diferido](/basic-concepts#registros-de-facturacion-diferidos).
+  - Nuevos endpoints para el envío de registros de facturación en diferido de **creación** y de **anulación**.
+</Update>
+
 <Update label="2025-04-01" description="v0.1.1beta">
   En las respuestas para los envíos de nuevos registros de facturación y  anulaciones de facturas se añaden los campos `next_request_waiting_time` y `next_request_datetime` para indicar el tiempo de espera desde la última petición y la fecha y hora a la que se puede realizar otro envío para la empresa cliente.
 </Update>
@@ -14,7 +19,7 @@ description: 'Registro de actualizaciones de la documentación'
 </Update>
 
 <Update label="2025-03-25" description="v0.0.1beta">
-  En la respuesta del endpoint _**Enviar registro de facturación**_ los campos `qr_value` y `qr_image` pueden ser `null`. Esto ocurre cuando la factura ha sido rechazada por Verifactu.
+  En la respuesta del endpoint _**Enviar registro de facturación**_ los campos `qr_value` y `qr_image` pueden ser `null`. Esto ocurre cuando la factura ha sido rechazada por VeriFactu.
 </Update>
 
 <Update label="2025-01-08" description="v0.0.1beta">
