Documentation edits made through Mintlify web editor

--- a/kubibai-differences.mdx
+++ b/kubibai-differences.mdx
@@ -3,9 +3,9 @@ title: 'Diferencias con KubiBAI'
 description: 'Diferencias principales con respecto al funcionamiento de KubiBAI'
 ---
 
-## Certificados de los emisores
+## Certificados
 
-Cada emisor de facturas deberá proporcionar un certificado para firmar las comunicaciones con la AEAT. Entre los certificados aceptados por la AEAT se incluyen los propios, los de representación, los de apoderamiento y los de colaboración social.
+La firma de las comunicaciones con la AEAT debe firmarse con un certificado autorizado. Nosotros hacemos las veces de intermediarios, con lo que no es necesario tener un certificado para cada empresa cliente que emite registros de facturación a la AEAT. Además, **cada intermediario puede optar por usar su propio certificado** (en lugar del nuestro) para la firma de las comunicaciones. Para ello, el intermediario debe estar registrado como **apoderado o colborador social** en la AEAT.
 
 ## Sistemas Informáticos de Facturación
 
