--- a/kubibai-differences.mdx
+++ b/kubibai-differences.mdx
@@ -17,4 +17,4 @@ Aunque se ha tratado de mantener una estructura de JSON similar a la utilizada e
 
 Una de las estructuras que más cambios ha sufrido es la que especifica los conceptos (`lines`), que en VeriFactu, además de ser obligatoria, presenta requisitos muy diferentes a los de TicketBAI.
 
-Recomendamos consultar detenidamente la sección [API desde KubiBAI](/openapi-kubibai-reference/enviar-registro-de-facturación) de esta documentación para identificar los campos que se conservan (y sus valores aceptados) y los que son nuevos con respecto a KubiBAI.
+Recomendamos consultar detenidamente la sección [API desde KubiBAI](/openapi-kubibai-reference/enviar-registro-de-facturacion) de esta documentación para identificar los campos que se conservan (y sus valores aceptados) y los que son nuevos con respecto a KubiBAI.
